commit de sécur

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=JDVBack
 spring.datasource.url=jdbc:mysql://localhost:3306/JDVBack?serverTimezone=UTC
 spring.datasource.username=wordpress
 spring.datasource.password=wordpress
+spring.jpa.show-sql=true
